# apps/api/app/api/v1/router.py
@@ -1,7 +1,8 @@
 from fastapi import APIRouter
 
-from app.api.v1 import admin, papers
+from app.api.v1 import admin, papers, taxonomy
 
 api_router = APIRouter()
 api_router.include_router(papers.router)
+api_router.include_router(taxonomy.router)
 api_router.include_router(admin.router)
